# dev_playground

./: Containerfile.api  Containerfile.backend  Containerfile.local  Containerfile.otel  Containerfile.web  Readme.md  docker-compose.yml  podman-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: linter_test.yml  main.yml  push_build.yml
api/: auth.py  main.py
api/controllers/: books.py
api/data/: book.py
api/tests/: test_main.py
backend/: main.py
frontend/: index.html  openapi.json  package-lock.json  package.json  tailwind.config.js
frontend/amplify/: team-provider-info.json
frontend/amplify/backend/: backend-config.json
frontend/amplify/backend/auth/frontend82f5eda8/: cli-inputs.json
frontend/amplify/backend/types/: amplify-dependent-resources-ref.d.ts
frontend/src/: App.tsx  Books.tsx  api.ts  aws-exports.ts  main.tsx
frontend/src/api_client/.openapi-generator/: FILES
frontend/src/api_client/apis/: DefaultApi.ts
frontend/src/api_client/models/: Book.ts  BookListResponse.ts  index.ts
frontend/src/models/: book.ts
infra/: api_alb.tf  ecr.tf  ecs_api_service.tf  main.tf  network.tf
infra/terraform/common/: .terraform.lock.hcl  ecr.tf  main.tf
infra/terraform/dev/: main.tf
infra/terraform/modules/: api_alb.tf  ecr.tf  ecs_api_service.tf  ecs_cluster.tf  ecs_service.tf  main.tf  network.tf  variables.tf
otel/: otel-config.yaml
web/nginx/conf.d/: app.conf  default.conf  default_local.conf
